Fixed video not showing

--- a/assets/sass/_extra.scss
+++ b/assets/sass/_extra.scss
@@ -4074,6 +4074,41 @@ body.home {
   }
 }
 
+.homepage-hero:has(video) {
+  overflow: hidden;
+  &:before {
+    content:"";
+    display: block;
+    position: absolute;
+    top: -5%;
+    left: 0;
+    width: 100%;
+    height: 60%;
+    background: linear-gradient(to bottom,  rgba(0,0,0,0.88) 0%,rgba(0,0,0,0) 100%);
+    z-index: 50;
+    filter: blur(20px);
+    pointer-events: none;
+    transform: scale(1.3);
+  }
+  video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+  }
+  .desktop {
+    display: none;
+  }
+  @include tab {
+    .desktop {
+      display: block;
+    }
+    .mobile {
+      display: none;
+    }
+  }
+}
 
 /* Tribe Calendar */
 .hours-of-operation-mobile {
